button gap fix

--- a/includes/modules/DualButtons/style.css
+++ b/includes/modules/DualButtons/style.css
@@ -1,26 +1,3 @@
-.et_pb_button_module_wrapper.et_pb_button_alignment_right {
-    text-align: right;
-}
-
-.et_pb_button_module_wrapper.et_pb_button_alignment_center {
-    text-align: center;
-}
-
-.et_pb_button_module_wrapper.et_pb_button_alignment_left {
-    text-align:left;
-}
-
-.center.et_pb_button_module_wrapper.et_pb_module.inftnc_pb_button_module {
-    text-align:center;
-}
-
-.left.et_pb_button_module_wrapper.et_pb_module.inftnc_pb_button_module {
-    text-align:left;
-}
-
-.right.et_pb_button_module_wrapper.et_pb_module.inftnc_pb_button_module {
-    text-align:right;
-}
 
 .inftnc_btn {
     display: inline-block;
@@ -28,7 +5,7 @@
 
 .inftnc_button_wrapper {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction:row;
 }
